--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "nodemon app"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-validator": "^5.3.1",
-    "mongoose": "^5.4.1"
+    "mongoose": "^5.4.1",
+    "multer": "^1.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
