--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.1",
     "multer": "^1.4.1"
   },
